{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 66,
  "lineage": "4537bb11-d2e5-f6b8-c31a-b893edd11849",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:loadbalancer/app/tf-ecs/325b15c9cd57f7dc",
            "arn_suffix": "app/tf-ecs/325b15c9cd57f7dc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-ecs-990732902.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:loadbalancer/app/tf-ecs/325b15c9cd57f7dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-ecs",
            "security_groups": [
              "sg-0032cdf536c34f7fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0183054ea12c45388"
              },
              {
                "subnet_id": "subnet-0588d7822e55c9e48"
              },
              {
                "subnet_id": "subnet-0ec10ab935a71ab28"
              }
            ],
            "subnets": [
              "subnet-0183054ea12c45388",
              "subnet-0588d7822e55c9e48",
              "subnet-0ec10ab935a71ab28"
            ],
            "vpc_id": "vpc-0a088d38d9a66785a",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:listener/app/tf-ecs/325b15c9cd57f7dc/86f186e80555dd09",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:listener/app/tf-ecs/325b15c9cd57f7dc/86f186e80555dd09",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:loadbalancer/app/tf-ecs/325b15c9cd57f7dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:listener/app/tf-ecs/325b15c9cd57f7dc/06a95cf74b7265be",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:147503580472:certificate/e0531ef1-da43-4a5d-8191-2a912148af3d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:targetgroup/TechChallengeApp/55bf1f9939b5f517",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:listener/app/tf-ecs/325b15c9cd57f7dc/06a95cf74b7265be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:loadbalancer/app/tf-ecs/325b15c9cd57f7dc",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:targetgroup/TechChallengeApp/55bf1f9939b5f517",
            "arn_suffix": "targetgroup/TechChallengeApp/55bf1f9939b5f517",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200",
                "path": "/healthcheck/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:147503580472:targetgroup/TechChallengeApp/55bf1f9939b5f517",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TechChallengeApp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c10555d374661509",
            "association_id": "eipassoc-09872d056d94b96b4",
            "domain": "vpc",
            "id": "eipalloc-0c10555d374661509",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-058e3f98db93da007",
            "private_dns": "ip-172-17-3-200.ap-southeast-1.compute.internal",
            "private_ip": "172.17.3.200",
            "public_dns": "ec2-54-251-219-86.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.219.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0176159ce584cec82",
            "association_id": "eipassoc-03c73ab147bbcacd0",
            "domain": "vpc",
            "id": "eipalloc-0176159ce584cec82",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0e3f185931afb0d38",
            "private_dns": "ip-172-17-4-129.ap-southeast-1.compute.internal",
            "private_ip": "172.17.4.129",
            "public_dns": "ec2-52-77-15-71.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.15.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc977b9b3bcaad51",
            "association_id": "eipassoc-09fc5639d8d226a9d",
            "domain": "vpc",
            "id": "eipalloc-0dc977b9b3bcaad51",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0bc73a20408d26dff",
            "private_dns": "ip-172-17-5-188.ap-southeast-1.compute.internal",
            "private_ip": "172.17.5.188",
            "public_dns": "ec2-18-140-179-36.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.179.36",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:internet-gateway/igw-0b5c033d1ac85d66e",
            "id": "igw-0b5c033d1ac85d66e",
            "owner_id": "147503580472",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c10555d374661509",
            "connectivity_type": "public",
            "id": "nat-00e8e6d64969439c9",
            "network_interface_id": "eni-058e3f98db93da007",
            "private_ip": "172.17.3.200",
            "public_ip": "54.251.219.86",
            "subnet_id": "subnet-0ec10ab935a71ab28"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0176159ce584cec82",
            "connectivity_type": "public",
            "id": "nat-09b8ec8d974232277",
            "network_interface_id": "eni-0e3f185931afb0d38",
            "private_ip": "172.17.4.129",
            "public_ip": "52.77.15.71",
            "subnet_id": "subnet-0183054ea12c45388"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc977b9b3bcaad51",
            "connectivity_type": "public",
            "id": "nat-057cf31520a808c80",
            "network_interface_id": "eni-0bc73a20408d26dff",
            "private_ip": "172.17.5.188",
            "public_ip": "18.140.179.36",
            "subnet_id": "subnet-0588d7822e55c9e48"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b5c033d1ac85d66e",
            "id": "r-rtb-0e82089abbbe380761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e82089abbbe38076",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:route-table/rtb-05074bd3260df54de",
            "id": "rtb-05074bd3260df54de",
            "owner_id": "147503580472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00e8e6d64969439c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:route-table/rtb-048cd35ad08574e2f",
            "id": "rtb-048cd35ad08574e2f",
            "owner_id": "147503580472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09b8ec8d974232277",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:route-table/rtb-061ce594e5c363655",
            "id": "rtb-061ce594e5c363655",
            "owner_id": "147503580472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057cf31520a808c80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ad293f92a997ff",
            "route_table_id": "rtb-05074bd3260df54de",
            "subnet_id": "subnet-05faf7152d62b32e3"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-egress",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d82a5e8df7c79f5d",
            "route_table_id": "rtb-048cd35ad08574e2f",
            "subnet_id": "subnet-02617974e00261454"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-egress"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a28ce2b5a56a9ff",
            "route_table_id": "rtb-061ce594e5c363655",
            "subnet_id": "subnet-0cd7e6fbc0dcaf65f"
          },
          "dependencies": [
            "aws_route_table.private-egress",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:security-group/sg-0032cdf536c34f7fe",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0032cdf536c34f7fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-ecs-alb",
            "name_prefix": "",
            "owner_id": "147503580472",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:security-group/sg-01d5a6c9c3f9e60d9",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d5a6c9c3f9e60d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0032cdf536c34f7fe"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "tf-ecs-tasks",
            "name_prefix": "",
            "owner_id": "147503580472",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:security-group/sg-006b220cc4000b36d",
            "description": "allow inbound db access from ECS only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006b220cc4000b36d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d5a6c9c3f9e60d9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tf-ecs-rds",
            "name_prefix": "",
            "owner_id": "147503580472",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:subnet/subnet-05faf7152d62b32e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-05faf7152d62b32e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147503580472",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:subnet/subnet-02617974e00261454",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-02617974e00261454",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147503580472",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:subnet/subnet-0cd7e6fbc0dcaf65f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-0cd7e6fbc0dcaf65f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147503580472",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:subnet/subnet-0ec10ab935a71ab28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0ec10ab935a71ab28",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "147503580472",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:subnet/subnet-0183054ea12c45388",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.17.4.0/24",
            "id": "subnet-0183054ea12c45388",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "147503580472",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:subnet/subnet-0588d7822e55c9e48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.17.5.0/24",
            "id": "subnet-0588d7822e55c9e48",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "147503580472",
            "vpc_id": "vpc-0a088d38d9a66785a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:147503580472:vpc/vpc-0a088d38d9a66785a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0540a16f31a26b73e",
            "default_route_table_id": "rtb-0e82089abbbe38076",
            "default_security_group_id": "sg-012353aa80b6a0e16",
            "dhcp_options_id": "dopt-0d1693a5fbad834dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a088d38d9a66785a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e82089abbbe38076",
            "owner_id": "147503580472"
          }
        }
      ]
    }
  ]
}